# pcc

./: .gitignore  AGENTS.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt  run.py  setup.py  tox.ini
benchmarks/: fib35.c  matmul.c  nbody.c  run_benchmarks.py  sieve_large.c
c_tests/: ackermann.c  basic_arithmetic.c  collatz.c  conditional.c  fibonacci.c  game_of_life.c  hanoi.c  mathutil.h  quicksort.c  search.h  sieve.c  stack.h  standard_c.c  struct_layout.c  unsigned_cmp.c  use_mathutil.c  use_search.c  use_stack.c  use_vec.c  vec.h
clang_study/: README.md  and.c  cast.c  if.c  malloc.c  simple_func.c  simple_int.c  simple_pointer.c  simple_printf.c  simple_recurse.c  struct.c  test_arrary.c  test_double_array.c  test_if_else.c  test_int.c  test_puts.c
pcc/: __main__.py  pcc.py  preprocessor.py  project.py  util.py
projects/: _tmp_sqlite_stage.c  test_lz4_main.c  test_openssl_main.c  test_pcre_main.c  test_postgres_main.c  test_postgres_query_main.c  test_postgres_version_main.c  test_readline_history_main.c  test_readline_main.c  test_sqlite_main.c  test_zlib_main.c  test_zstd_main.c
tests/: all_tests.py  c_testsuite_cases.py  c_testsuite_manifest.json  clang_c_cases.py  clang_c_manifest.json  gcc_torture_cases.py  gcc_torture_manifest.json  test_advanced.py  test_algorithms.py  test_and.py  test_array.py  test_array_init.py  test_arrow.py  test_assign.py  test_bitfields.py  test_bitwise.py  test_c_ast.py  test_c_evluater.py  test_c_files.py  test_c_generator.py  test_c_lexer.py  test_c_parser.py  test_c_testsuite.py  test_cast.py  (+99 more)
(+93 files in other folders)
