[project]
name = "python-cc"
version = "0.0.2"
description = "Pcc is a c compiler built on python and llvm."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
keywords = ["c", "compiler", "llvm", "ply"]
dependencies = [
    "llvmlite==0.46.0",
    "click",
]

[project.scripts]
pcc = "pcc.pcc:main"

[project.urls]
Homepage = "http://pypi.python.org/pypi/pcc/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pcc"]

[tool.pytest.ini_options]
addopts = "-n auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
]
